--- a/src/docs/5.28.x/core-development-concepts/ci-cd/environments.mdx
+++ b/src/docs/5.28.x/core-development-concepts/ci-cd/environments.mdx
@@ -154,6 +154,6 @@ To enable this, please open your [`packages/cwp-template-aws/template/api/pulumi
 
 <Alert type="info">
 
-Learn more about differences between the development and production cloud infrastructure differences in the [Cloud Infrastructure](../../architecture/api/introduction#different-cloud-infrastructure-setups) key topic.
+Learn more about differences between the development and production cloud infrastructure differences in the [Cloud Infrastructure](/docs/5.28.x/architecture/api/overview) key topic.
 
 </Alert>
