--- a/src/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application.mdx
+++ b/src/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application.mdx
@@ -24,7 +24,7 @@ The **Full Stack Application** scaffold creates a new full stack application whi
 
 <Alert type="info">
 
-In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [GraphQL API](../../core-development-concepts/scaffolding/graphql-api) and [React Application](../../core-development-concepts/scaffolding/react-application) scaffolds.
+In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api) and [React Application](../../core-development-concepts/scaffolding/full-stack-application) scaffolds.
 
 </Alert>
 
@@ -34,11 +34,11 @@ In order to create a new full stack application, behind the scenes, the scaffold
 
 The Full Stack Application scaffold creates everything that you might need in order to start creating a new full stack application. It creates two [project applications](../../core-development-concepts/project-organization/project-applications), one that holds your frontend, and the other one that holds your backend application.
 
-The frontend application is powered by React and is created with the [React Application](../../core-development-concepts/scaffolding/react-application) scaffold. On the other hand, the backend application is powered by a GraphQL API and is created with the [GraphQL API](../../core-development-concepts/scaffolding/graphql-api) scaffold.
+The frontend application is powered by React and is created with the [React Application](../../core-development-concepts/scaffolding/full-stack-application) scaffold. On the other hand, the backend application is powered by a GraphQL API and is created with the [GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api) scaffold.
 
 <Alert type="info">
 
-For more information on specific features that these two scaffolds include, we recommend you check out the dedicated [React Application](../../core-development-concepts/scaffolding/react-application) and [GraphQL API](../../core-development-concepts/scaffolding/graphql-api) guides.
+For more information on specific features that these two scaffolds include, we recommend you check out the dedicated [React Application](../../core-development-concepts/scaffolding/full-stack-application) and [GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api) guides.
 
 </Alert>
 
@@ -60,7 +60,7 @@ To check out the example, start your React application locally and open it in yo
 
 <Alert type="info">
 
-Check out the React Application scaffold's [Development](../../core-development-concepts/scaffolding/react-application#development-using-the-watch-command) section to learn how to start the React application locally.
+Check out the React Application scaffold's [Development](../../core-development-concepts/scaffolding/full-stack-application#development-using-the-watch-command) section to learn how to start the React application locally.
 
 </Alert>
 
@@ -78,7 +78,7 @@ Then, from the list of all available scaffolds, select **Full Stack Application*
 
 ### Essential Files and Folders
 
-The following is brief overview of the essential files and folders that are created during the scaffolding process. For more information, we encourage you to check out the dedicated [React Application](../../core-development-concepts/scaffolding/react-application#essential-files-and-folders) and [GraphQL API](../../core-development-concepts/scaffolding/graphql-api#essential-files-and-folders) guides.
+The following is brief overview of the essential files and folders that are created during the scaffolding process. For more information, we encourage you to check out the dedicated [React Application](../../core-development-concepts/scaffolding/full-stack-application#essential-files-and-folders) and [GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api#essential-files-and-folders) guides.
 
 ```bash New Full Stack Application Folder (Some Files Removed for Brevity)
 ├── api                                 # GraphQL API's project application folder.
@@ -189,11 +189,11 @@ If you're just working on one side of your application, for example on your Grap
 
 ### Extending the GraphQL API
 
-The new GraphQL API can be extended in two ways. Be sure to check the [Extending GraphQL API](../../core-development-concepts/scaffolding/graphql-api#extending-the-graphql-api) section in the [GraphQL API](../../core-development-concepts/scaffolding/graphql-api) scaffold's guide.
+The new GraphQL API can be extended in two ways. Be sure to check the [Extending GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api#extending-the-graphql-api) section in the [GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api) scaffold's guide.
 
 ### Extending the React application
 
-On the React application side, you can start by creating new pages, in the similar fashion it's already done with the existing example pages. Be sure to check the [Creating First Pages](../../core-development-concepts/scaffolding/react-application#creating-first-pages) section in the [GraphQL API](../../core-development-concepts/scaffolding/react-application) scaffold's guide.
+On the React application side, you can start by creating new pages, in the similar fashion it's already done with the existing example pages. Be sure to check the [Creating First Pages](../../core-development-concepts/scaffolding/full-stack-application#creating-first-pages) section in the [GraphQL API](../../core-development-concepts/scaffolding/full-stack-application) scaffold's guide.
 
 ## FAQ
 
