--- a/src/docs/5.28.x/headless-cms/basics/graphql-api.mdx
+++ b/src/docs/5.28.x/headless-cms/basics/graphql-api.mdx
@@ -118,9 +118,9 @@ https://random-id-xyz.cloudfront.net/cms/preview/it-IT
 <Alert type="info">
 
 To learn more about the cloud infrastructure deployed as part of the **API** project application,
-check out the [Cloud Infrastructure - API](../../architecture/api/introduction)
+check out the [Cloud Infrastructure - API](/docs/5.28.x/architecture/api/introduction)
 key topic. You can also skip to the [API
-Overview](../../architecture/api/overview#6-headless-cms) section, to
+Overview](/docs/5.28.x/architecture/api/overview) section, to
 immediately see how the Headless CMS GraphQL API fits in.
 
 </Alert>
