--- a/src/docs/5.29.x/architecture/deployment-modes/development.mdx
+++ b/src/docs/5.29.x/architecture/deployment-modes/development.mdx
@@ -46,7 +46,7 @@ an AZ failure. The same cannot be said for the Amazon ElasticSearch Service <dia
 
 The Amazon ElasticSearch Service is only deployed with the **Amazon DynamoDB + Amazon ElasticSearch Service** setup.
 
-For more information, visit the [Different Setups](/docs/{version}/architecture/introduction#different-setups) sections.
+For more information, visit the [Different Setups](/docs/{version}/get-started/install-webiny#pick-your-database) sections.
 
 </Alert>
 
