--- a/src/docs/5.29.x/core-development-concepts/scaffolding/extend-admin-area.mdx
+++ b/src/docs/5.29.x/core-development-concepts/scaffolding/extend-admin-area.mdx
@@ -27,7 +27,7 @@ Note that, when we say GraphQL HTTP API, by default, we're referring to the one 
 
 <Alert type="info">
 
-Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](../../architecture/api/introduction) key topics section.
+Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](../../architecture/api/overview) key topics section.
 
 </Alert>
 
@@ -59,7 +59,7 @@ Note that initially all entries consist of two text fields: `title` and `descrip
 
 The **Extend Admin Area** scaffold also extends your GraphQL API with supporting query and mutation operations.
 
-In order to do this, internally, the scaffold is simply utilizing the existing **Extend GraphQL API** scaffold. To learn more about its main features and how to continue developing on top of the application code it generates, please visit [its dedicated guide](../../core-development-concepts/extend-admin-area/extend-graphql-api).
+In order to do this, internally, the scaffold is simply utilizing the existing **Extend GraphQL API** scaffold. To learn more about its main features and how to continue developing on top of the application code it generates, please visit [its dedicated guide](../../core-development-concepts/extending-and-customizing/extend-graphql-api).
 
 ### Multi-Locale Support Enabled
 
@@ -161,7 +161,7 @@ Check out the [Extend GraphQL API - Development](#development) section for more 
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
-Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](./security) to learn how to implement these on your own.
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](../..//core-development-concepts/security-framework/introduction) to learn how to implement these on your own.
 
 ### Can Webiny's multi-tenancy feature be utilized with this scaffold?
 
