--- a/src/docs/5.30.x/wcp/link-a-project.mdx
+++ b/src/docs/5.30.x/wcp/link-a-project.mdx
@@ -18,7 +18,7 @@ Webiny Control Panel ("WCP") is currently in a private Alpha release. If you wis
 
 </Alert>
 
-## Prerequirements
+## Prerequisites
 
 For this guide you will need to have:
 
@@ -31,7 +31,7 @@ When you install Webiny CMS, by default, it's managed as an Open-Source instance
 
 ## How to invite a user to your WCP project?
 
-Any developer working on your Webiny CMS project that requires to build and run Webiny CMS inside their personal development environment will need to have a WCP accout and be assigned to your WCP project.
+Any developer working on your Webiny CMS project that requires to build and run Webiny CMS inside their personal development environment will need to have a WCP acount and be assigned to your WCP project.
 
 To invite a team member to a WCP project, a user with `owner` rights has to perform the following actions. Inside the WCP project navigate to the **Team Members** tab:
 
@@ -43,7 +43,7 @@ Click the `Invite team member` button and fill out the form:
 
 **Note**: A user with a role of `Member` can access the project, see the dashboard, and retrieve the license, but they can't invite other members or change project settings, for that you need to assign the user a role of `Owner`.
 
-Once the form is submitted, the user will recieve an invite. If needed, you can revoke the invite by pressing the `Revoke` button.
+Once the form is submitted, the user will receive an invite. If needed, you can revoke the invite by pressing the `Revoke` button.
 
 ![WCP - Invite team member - Step 3](./assets/link-a-project/invite-team-member-step3.png)
 
@@ -63,7 +63,7 @@ yarn webiny login
 
 <Alert type="info" title="Where's my Webiny CMS project folder?">
 
-If you don't have a Webiny CMS project, you will need to check out one from your teams version control. If you're just creating a new project, you can follow the [get started tutorial](../../docs/get-started/install-webiny).
+If you don't have a Webiny CMS project, you will need to check out one from your teams version control. If you're just creating a new project, you can follow the [get started tutorial](/docs/{version}/get-started/install-webiny).
 
 </Alert>
 
@@ -105,7 +105,7 @@ To retrieve the `API key`, inside your WCP project navigate to `CI/CD Environmen
 
 ![WCP - Link project inside a CI/CD environment - Step 1](./assets/link-a-project/link-cicd-step1.png)
 
-Once you have your `API key`, you need to define a environment variable called `WCP_PROJECT_ENVIRONMENT_API_KEY` inside your CI/CD enviroment:
+Once you have your `API key`, you need to define a environment variable called `WCP_PROJECT_ENVIRONMENT_API_KEY` inside your CI/CD environment:
 
 ```plain
 WCP_PROJECT_ENVIRONMENT_API_KEY = 732e4630-af5d-sample-key-22fc89e2dca9
@@ -115,6 +115,6 @@ With this the project inside your CI/CD pipeline will automatically retrieve the
 
 <Alert type="warning" title="Don't share API keys between environments">
 
-Each CI/CD enviroment must have its own `API key`. Sharing keys between environments will cause WCP to record your monitoring data incorrectly and certain environments might run into API call limits where they shouldn't. Read more about the limits [here](./overview).
+Each CI/CD environment must have its own `API key`. Sharing keys between environments will cause WCP to record your monitoring data incorrectly and certain environments might run into API call limits where they shouldn't. Read more about the limits [here](./overview).
 
 </Alert>
