--- a/src/docs/shared/release-notes/5.14.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.14.0/changelog.mdx
@@ -44,7 +44,7 @@ In any case, an addition to the built-in Webpack configuration has been made, so
 
 #### Using System Font ([#1882](https://github.com/webiny/webiny-js/pull/1882))
 
-The application code that was generated during the [React Application](../../core-development-concepts/scaffolding/react-application) scaffolding process would import a custom font. In almost all cases, the font would not be available on user's machine, making the application a bit less visually appealing.
+The application code that was generated during the [React Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application) scaffolding process would import a custom font. In almost all cases, the font would not be available on user's machine, making the application a bit less visually appealing.
 
 Because of this, we've switched to the **Trebuchet MS, sans-serif** system font, so that everybody gets a consistent initial look of the application.
 
@@ -52,7 +52,7 @@ Because of this, we've switched to the **Trebuchet MS, sans-serif** system font,
 
 #### `webiny.config.ts` Updated Correctly ([#1882](https://github.com/webiny/webiny-js/pull/1882))
 
-In some cases, upon using the recently introduced [Full Stack Application](../../core-development-concepts/scaffolding/full-stack-application) scaffold, the [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-full-stack-app/templates/essentials/code/webiny.config.ts) file would not get updated correctly. This would result in the React application not being able to communicate with the deployed GraphQL API, leaving the user confused and unable to continue.
+In some cases, upon using the recently introduced [Full Stack Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application) scaffold, the [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-full-stack-app/templates/essentials/code/webiny.config.ts) file would not get updated correctly. This would result in the React application not being able to communicate with the deployed GraphQL API, leaving the user confused and unable to continue.
 
 The file in question is now correctly updated during the scaffolding process, so you can start building your application without any unexpected blockers on the way.
 
