--- a/src/docs/shared/release-notes/5.16.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.16.0/changelog.mdx
@@ -128,7 +128,7 @@ Speaking of the [`webiny watch`](../../core-development-concepts/basics/watch-co
 
 ![webiny watch Command - The Improved Deploy Pane](./changelog/watch-deploy-pane-improvement.png)
 
-Finally, the [Full Stack Application](/docs/{version}/how-to-guides/scaffolding/full-stack-application/) scaffold should now work correctly on Windows operating system.
+Finally, the [Full Stack Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application) scaffold should now work correctly on Windows operating system.
 
 ### Changes In the Way We Approach Project Upgrades
 
