--- a/src/docs/shared/release-notes/5.18.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.18.0/changelog.mdx
@@ -39,7 +39,7 @@ npx create-webiny-project my-new-webiny-project
 
 <Alert type="info">
 
-For more installation-related information, you can also visit the updated [Install Webiny](/docs/{version}/tutorials/install-webiny) tutorial.
+For more installation-related information, you can also visit the updated [Install Webiny](/docs/{version}/get-started/install-webiny) tutorial.
 
 </Alert>
 
@@ -163,7 +163,7 @@ We still have a couple of documentation-related improvements that we'd like to d
 
 ### Create Custom Application - Security Tutorial ([#340](https://github.com/webiny/docs.webiny.com/pull/340))
 
-We've expanded our existing [Create Custom Application](../../custom-app-tutorial/overview/introduction) tutorial with the new [Security](../../custom-app-tutorial/security-overview/introduction) section!
+We've expanded our existing Create Custom Application tutorial with the new Security section!
 
 As the title suggests, in this section we dive deeper into the security aspect of custom application development. We cover implementation of different concepts like authentication, authorization, deploying custom cloud infrastructure resources, [Amazon Cognito User Pools](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-identity-pools.html), and more!
 
