--- a/src/docs/shared/release-notes/5.20.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.20.0/changelog.mdx
@@ -21,7 +21,7 @@ We've resolved an issue that would occur when a user created a content model pro
 
 <Alert type="info">
 
-To learn more about creating content models via plugins, check out the [Define Content Models via Plugins](/docs/{version}/how-to-guides/webiny-applications/headless-cms/content-model-plugins/) guide.
+To learn more about creating content models via code, check out the [Define Content Models via Code](/docs/{version}/headless-cms/extending/content-models-via-code) guide.
 
 </Alert>
 
@@ -45,7 +45,7 @@ Prior to this release, defining an empty nested object field as the initial fiel
 
 ### Added Ability to Re-render an Existing Published Page ([#2092](https://github.com/webiny/webiny-js/pull/2092))
 
-From time to time, users may need to re-render a particular page they've previously created and published. This can now be done easily via the built-in [API Playground](/docs/{version}/how-to-guides/webiny-applications/admin-area/api-playground/), by executing a simple `rerenderPage` GraphQL mutation. For example:
+From time to time, users may need to re-render a particular page they've previously created and published. This can now be done easily via the built-in [API Playground](/docs/{version}/admin-area/basics/api-playground), by executing a simple `rerenderPage` GraphQL mutation. For example:
 
 ```graphql Re-rendering a Page via the 'rerenderPage' Mutation
 mutation {
@@ -90,7 +90,7 @@ The `PagePlugin` plugin that was previously used is no longer supported. If you'
 
 ### Fixed `webiny watch` Command's `--remoteRuntimeLogs` (`-r`) Argument ([#2124](https://github.com/webiny/webiny-js/pull/2124))
 
-In a couple of scenarios, upon running the [`webiny watch`](/docs/{version}/how-to-guides/use-watch-command/) command, adding the `--remoteRuntimeLogs` (`-r`) argument would not properly return runtime logs in user's terminal. This has now been addressed.
+In a couple of scenarios, upon running the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command, adding the `--remoteRuntimeLogs` (`-r`) argument would not properly return runtime logs in user's terminal. This has now been addressed.
 
 ### Fixed React Component Scaffold's `webiny.config.ts` File ([#2123](https://github.com/webiny/webiny-js/pull/2123))
 
@@ -98,7 +98,7 @@ The [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/packages/
 
 ### Two New `webiny deploy` Hooks ([#2079](https://github.com/webiny/webiny-js/pull/2079))
 
-You can now hook onto the pre-build and post-build events that are emitted during the [`webiny deploy`](/docs/{version}/how-to-guides/deployment/deploy-your-project/) command. More information about all related hooks can be found in the new [Build and Deploy Hooks](../../infrastructure/basics/build-and-deploy-hooks) guide.
+You can now hook onto the pre-build and post-build events that are emitted during the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command. More information about all related hooks can be found in the new [Build and Deploy Hooks](../../infrastructure/basics/build-and-deploy-hooks) guide.
 
 ## Documentation
 
