--- a/src/docs/5.28.x/admin-area/new-app-tutorial/scaffolding.mdx
+++ b/src/docs/5.28.x/admin-area/new-app-tutorial/scaffolding.mdx
@@ -169,7 +169,7 @@ Check out the [Extend GraphQL API - Development](#development) section for more 
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
-Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](./security) to learn how to implement these on your own.
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](../../overview/features/security) to learn how to implement these on your own.
 
 ### Can Webiny's multi-tenancy feature be utilized with this scaffold?
 
