--- a/src/docs/5.29.x/admin-area/new-app-tutorial/extending-entities.mdx
+++ b/src/docs/5.29.x/admin-area/new-app-tutorial/extending-entities.mdx
@@ -201,4 +201,4 @@ For data validation in general, we recommend you check out the [`@webiny/validat
 
 ### What about security (authentication and authorization)?
 
-Because this is not something we can effectively predict, the generated application code does not include any authentication and authorization logic. But luckily, with a couple of [built-in utilities](./security), this is not too hard to implement.
+Because this is not something we can effectively predict, the generated application code does not include any authentication and authorization logic. But luckily, with a couple of [built-in utilities](../../overview/features/security), this is not too hard to implement.
