--- a/src/docs/5.29.x/admin-area/new-app-tutorial/scaffolding.mdx
+++ b/src/docs/5.29.x/admin-area/new-app-tutorial/scaffolding.mdx
@@ -27,7 +27,7 @@ Note that, when we say GraphQL HTTP API, by default, we're referring to the one 
 
 <Alert type="info">
 
-Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](../../architecture/api/introduction) key topics section.
+Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/architecture/introduction) key topics section.
 
 </Alert>
 
@@ -161,7 +161,7 @@ Check out the [Extend GraphQL API - Development](#development) section for more 
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
-Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](./security) to learn how to implement these on your own.
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](../../overview/features/security) to learn how to implement these on your own.
 
 ### Can Webiny's multi-tenancy feature be utilized with this scaffold?
 
