--- a/src/docs/shared/release-notes/5.13.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.13.0/changelog.mdx
@@ -21,9 +21,9 @@ Please check the [Webiny 5.13.0 migration guide](/docs/{version}/release-notes/5
 
 The highlight of this release - we bring you three brand new scaffolds that are focused on aiding developers in custom application development. The three scaffolds are:
 
-- [Full Stack Application](../../core-development-concepts/scaffolding/full-stack-application)
-- [GraphQL API](../../core-development-concepts/scaffolding/graphql-api)
-- [React Application](../../core-development-concepts/scaffolding/react-application)
+- [Full Stack Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application)
+- [GraphQL API](../../core-development-concepts/scaffolding/extend-graphql-api)
+- [React Application](/docs/5.28.x/core-development-concepts/scaffolding/full-stack-application)
 
 To get started, simply run the existing `webiny scaffold` command and pick the scaffold you need. On the other hand, if you'd like to learn more, you can check out the linked how-to guides.
 
@@ -78,23 +78,23 @@ This has now been taken care of and you should be able to successfully deploy yo
 
 <Alert type="info">
 
-Check out the [Use AWS Profiles](/docs/{version}/how-to-guides/deployment/aws/use-aws-profiles/) how-to guide to learn how to use different AWS profiles upon deploying your Webiny project.
+Check out the [Use AWS Profiles](/docs/{version}/infrastructure/aws/use-aws-profiles) how-to guide to learn how to use different AWS profiles upon deploying your Webiny project.
 
 </Alert>
 
 ### Fix `watch` on Windows ([#1848](https://github.com/webiny/webiny-js/pull/1848))
 
-There's currently a bug in the Pulumi path detection for file watching, so on Windows, where paths start with **C:**, etc., Pulumi thinks it's a relative path, and constructs a wrong file path to watch. To bypass this issue, and get the [watch](/docs/{version}/how-to-guides/use-watch-command/#webiny-watch-command) command to work on Windows, we've temporarily disabled path filtering on Windows.
+There's currently a bug in the Pulumi path detection for file watching, so on Windows, where paths start with **C:**, etc., Pulumi thinks it's a relative path, and constructs a wrong file path to watch. To bypass this issue, and get the [watch](/docs/{version}/core-development-concepts/basics/watch-command#webiny-watch-command) command to work on Windows, we've temporarily disabled path filtering on Windows.
 
 Watch works just a good, but you might experience a case of double update on Lambda functions. Not a major problem, just a little detail you'll most likely not even notice, if you don't pay attention to deploy logs.
 
 ### Allow Links To Be Rendered in the Menu Group ([#1857](https://github.com/webiny/webiny-js/pull/1857))
 
-With the introduction of [Webiny UI Composer](/docs/{version}/key-topics/ui-composer/introduction), in Admin Area, navigation menu items are now rendered using the new concept of [renderers](/docs/{version}/key-topics/ui-composer/creating-elements#enabling-support-for-renderers). Unfortunately, it did not include a renderer for links as a direct child of a menu group. With this release, we've improved one of the renderers to handle both 2-level and 3-level menu hierarchy.
+With the introduction of Webiny UI Composer, in Admin Area, navigation menu items are now rendered using the new concept of renderers. Unfortunately, it did not include a renderer for links as a direct child of a menu group. With this release, we've improved one of the renderers to handle both 2-level and 3-level menu hierarchy.
 
 <Alert type="info">
 
-Users who used the [Extend Admin Area](../../admin-area/new-app-tutorial/scaffolding) scaffold were the first to experience this issue, as the main-menu items that were created during the scaffolding process simply weren't clickable.
+Users who used the [Extend Admin Area](/docs/5.28.x/admin-area/new-app-tutorial/scaffolding) scaffold were the first to experience this issue, as the main-menu items that were created during the scaffolding process simply weren't clickable.
 
 </Alert>
 
