--- a/src/docs/shared/release-notes/5.5.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.5.0/changelog.mdx
@@ -34,9 +34,9 @@ The brand new `webiny watch` command brings local development experience to a wh
 
 #### How We Currently Do It
 
-Let’s say you wanted to expand the default GraphQL API, that’s deployed as part of the [API](../../architecture/api/introduction) project application. At the moment, in order to do that, you’d have to do the following:
+Let’s say you wanted to expand the default GraphQL API, that’s deployed as part of the [API](../../architecture/api/overview) project application. At the moment, in order to do that, you’d have to do the following:
 
-- start a watch session on relevant packages using the [`webiny workspaces run`](/docs/{version}/how-to-guides/working-with-workspaces) command
+- start a watch session on relevant packages using the `webiny workspaces run` command
 - make your code changes
 - deploy them using the [`yarn webiny deploy api --env {your-environment}`](#) command
 - repeat
@@ -99,7 +99,7 @@ Now you have to define access to specific content model groups first, and based 
 
 ### Rich Text Content Renderer ([#1566](https://github.com/webiny/webiny-js/pull/1566))
 
-Up until now, you had to manually render rich text content that comes from the Headless CMS. To make it a lot easier for you, we've finally introduced a dedicated component to do the heavy lifting. For details, see the [how-to guide on rendering the rich text content](/docs/{version}/how-to-guides/webiny-applications/headless-cms/rendering-rich-text/).
+Up until now, you had to manually render rich text content that comes from the Headless CMS. To make it a lot easier for you, we've finally introduced a dedicated component to do the heavy lifting. For details, see the [how-to guide on rendering the rich text content](/docs/{version}/headless-cms/extending/render-rich-text-content).
 
 ### Filtering by Reference Field Id ([#1567](https://github.com/webiny/webiny-js/pull/1567))
 
