fix(docs): fix broken links in v5.33 release notes

--- a/src/docs/shared/release-notes/5.33.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.33.3/changelog.mdx
@@ -21,7 +21,7 @@ With this release, the issue has been resolved. You can expect all the relevant 
 
 <Alert type="info">
 
-To learn more about development and production deployment modes, check out the [Deployment Modes](/docs/{version}/architecture/deployment-modes/introduction) section.
+To learn more about development and production deployment modes, check out the [Deployment Modes](/docs/architecture/deployment-modes/introduction) section.
 
 </Alert>
 
