fix(docs): use valid languages

--- a/src/docs/5.28.x/infrastructure/aws/use-aws-profiles.mdx
+++ b/src/docs/5.28.x/infrastructure/aws/use-aws-profiles.mdx
@@ -31,7 +31,7 @@ A different profile can be specified via the `AWS_PROFILE` environment variable,
 
 The easiest way to do it would be using the `.env` file, located in your project root, for example:
 
-```console .env
+```bash .env
 AWS_PROFILE=my-profile
 ```
 
