--- a/src/docs/5.30.x/overview/features/mailer.mdx
+++ b/src/docs/5.30.x/overview/features/mailer.mdx
@@ -46,7 +46,7 @@ A mailer which sends e-mails via the defined SMTP credentials. In the background
 
 The configuration is done via the environment variables:
 
-```dotenv
+```bash
 WEBINY_MAILER_HOST=smtp.localhost.test
 WEBINY_MAILER_USER=root
 WEBINY_MAILER_PASSWORD=password
