--- a/src/docs/5.28.x/core-development-concepts/ci-cd/setup.mdx
+++ b/src/docs/5.28.x/core-development-concepts/ci-cd/setup.mdx
@@ -55,7 +55,7 @@ You must be running a **public repo** or a **private repo under a GitHub Enterpr
 The current GitHub CI/CD set up relies on [GitHub Environments](https://docs.github.com/en/actions/reference/environments). Environments are only available in public repositories - for all GitHub products - or private repositories in GitHub Enterprise.
 If you're running a private repository in a non-GitHub Enterprise account, you will get the following installation error, and **won't be able to use this scaffold today**.
 
-```console
+```bash
 ✘ Creation of pr, dev, staging, and prod code repository environments failed with the following message: Not Found
 ```
 
