--- a/src/docs/5.28.x/core-development-concepts/extending-and-customizing/create-a-package-in-webiny-project.mdx
+++ b/src/docs/5.28.x/core-development-concepts/extending-and-customizing/create-a-package-in-webiny-project.mdx
@@ -79,7 +79,7 @@ Before we continue, let's quickly cover the workspaces list, located in the `pac
 
 The content of the package looks as shown below:
 
-```package.json
+```json
 (...)
 "workspaces": {
     "packages": [
