--- a/src/docs/5.29.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.29.x/headless-cms/extending/content-models-via-code.mdx
@@ -354,9 +354,11 @@ Both `id` and `fieldId` properties represent unique IDs of the field. We can ass
 
 There is a difference in how these two IDs are used internally within Headless CMS' application code, but this is more important when a content model is defined regularly, via the [Content Model Editor](#via-the-admin-area). In case where a content model is defined via a plugin, we can simply use the same value for both fields.
 
-```info
+<Alert type="info">
+
 Note that the `id` property must be unique throughout all the models.
-```
+
+</Alert>
 
 ### What are the values that I can pass to the `icon` property of the [`CmsGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.21.0/packages/api-headless-cms/src/content/plugins/CmsGroupPlugin.ts#L4) plugin?
 
