feat: detect broken links at build time (#511)

--- a/src/docs/5.28.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.28.x/headless-cms/extending/content-models-via-code.mdx
@@ -147,7 +147,7 @@ Once plugins are registered successfully, we should be able to see the following
 
 <Alert type="success">
 
-With the [`webiny watch`](/docs/{version}/how-to-guides/use-watch-command/) command up and running, the performed application code changes should be automatically rebuilt and redeployed into the cloud.
+With the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command up and running, the performed application code changes should be automatically rebuilt and redeployed into the cloud.
 
 </Alert>
 
@@ -258,7 +258,7 @@ export default [
 ]
 ```
 
-With the [`webiny watch`](/docs/{version}/how-to-guides/use-watch-command/) command up and running,
+With the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command up and running,
 the performed application code changes should be automatically rebuilt and redeployed into the cloud.
 And you should be able to see the following Product model.
 
@@ -354,9 +354,11 @@ Both `id` and `fieldId` properties represent unique IDs of the field. We can ass
 
 There is a difference in how these two IDs are used internally within Headless CMS' application code, but this is more important when a content model is defined regularly, via the [Content Model Editor](#via-the-admin-area). In case where a content model is defined via a plugin, we can simply use the same value for both fields.
 
-```info
+<Alert type="info">
+
 Note that the `id` property must be unique throughout all the models.
-```
+
+</Alert>
 
 ### What are the values that I can pass to the `icon` property of the [`CmsGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.21.0/packages/api-headless-cms/src/content/plugins/CmsGroupPlugin.ts#L4) plugin?
 
