--- a/src/docs/5.29.x/core-development-concepts/extending-and-customizing/create-a-package-in-webiny-project.mdx
+++ b/src/docs/5.29.x/core-development-concepts/extending-and-customizing/create-a-package-in-webiny-project.mdx
@@ -80,7 +80,7 @@ Before we continue, let's quickly cover the workspaces list, located in the `pac
 
 The content of the package looks as shown below:
 
-```package.json
+```json
 (...)
 "workspaces": {
     "packages": [
@@ -497,12 +497,6 @@ And it will work just fine. But, as your project grows and you add more packages
 
 Webiny CLI provides the `workspaces run` (or `ws run` for short) command that enables you to run a single command across multiple workspaces at once.
 The common use case where this might be needed is local development, where you want to watch for code changes on multiple packages, and rebuild them accordingly.
-
-<Alert type="info">
-
-We recommend reading the [Working With Workspaces](/docs/{version}/how-to-guides/working-with-workspaces) article to learn more about workspaces.
-
-</Alert>
 
 For example, to establish a watch session across multiple packages, located in a specific folder, you can run the following command:
 
