--- a/src/docs/5.29.x/page-builder/extending/extend-graphql-api.mdx
+++ b/src/docs/5.29.x/page-builder/extending/extend-graphql-api.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info">
 
-Use the [`webiny watch`](../../core-development-concepts/basics/watch-command) command to continuously deploy application code changes into the cloud and instantly see them in action. For quick (manual) testing, you can use the built-in [API Playground](/docs/{version}/how-to-guides/webiny-applications/admin-area/api-playground/).
+Use the [`webiny watch`](../../core-development-concepts/basics/watch-command) command to continuously deploy application code changes into the cloud and instantly see them in action. For quick (manual) testing, you can use the built-in [API Playground](/docs/{version}/admin-area/basics/api-playground).
 
 </Alert>
 
@@ -184,7 +184,7 @@ export default [
 
 With all the changes in place, we should be able to run the following GraphQL query:
 
-```gql
+```graphql
 query ListSpecialPages {
   pageBuilder {
     listPages(where: { special: true }) {
@@ -283,7 +283,7 @@ The code above can be placed in the [`api/graphql/src/plugins/pages.ts`](https:/
 
 With all the changes in place, we should be able to run the following GraphQL mutation:
 
-```gql
+```graphql
 mutation DuplicatePage($id: ID!) {
   pageBuilder {
     duplicatePage(id: $id) {
