fix: moar broken links

--- a/src/docs/shared/release-notes/5.32.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.32.0/changelog.mdx
@@ -59,7 +59,7 @@ We've recently noticed that adding more widgets via plugins causes them all to b
 
 ### Register and Sort File Type Plugins in the Right Order ([#2605](https://github.com/webiny/webiny-js/pull/2605))
 
-Our File Manager supports custom file type renderers, as shown in [this tutorial](https://www.webiny.com/docs/file-manager/extending/create-a-file-type-plugin). However, at some point in time, we switched to that `<Admin>` component, which configures the entire admin app, and we unknowingly caused a change in the order of plugins registration (defaults vs. user-made plugins), which affected the logic of picking the right file type renderer.
+Our File Manager supports custom file type renderers, as shown in [this tutorial](/docs/file-manager/extending/create-a-file-type-plugin). However, at some point in time, we switched to that `<Admin>` component, which configures the entire admin app, and we unknowingly caused a change in the order of plugins registration (defaults vs. user-made plugins), which affected the logic of picking the right file type renderer.
 
 With this release, we've fixed the order of plugins registration specifically for the File Manager, and also improved the decision-making logic within the File Manager itself.
 
