docs: changed the directory structure of user guides

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/glossary.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/glossary.mdx
@@ -1,6 +1,6 @@
 ---
-title: Glossary
-description: Learn about the platform-specific terminology, and their meanings.
+title: Headless CMS Glossary
+description: Learn about the Headless CMS terminologies.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -18,6 +18,3 @@ A Content Model is define all the fields that you want to store.
 
 ### Content Entry
 Content Entry is a like a single record in database.
-
-## Page Builder
-
