--- a/src/docs/shared/community-plugins/introduction.mdx
+++ b/src/docs/shared/community-plugins/introduction.mdx
@@ -57,8 +57,8 @@ Then, from the list of all available scaffolds, select **React Component Package
 
 To implement your plugin, based on the plugin you want to create, please refer to the following tutorials:
 
-- [Create a New Page Element for Page Builder](/docs/page-builder/extending/create-a-page-element)
-- [Create a Custom Field Plugin for Headless CMS](/docs/headless-cms/extending/custom-field-type)
+- [Create a New Page Element for Page Builder](/docs/{version}/page-builder/extending/create-a-page-element)
+- [Create a Custom Field Plugin for Headless CMS](/docs/{version}//headless-cms/extending/custom-field-type)
 
 <Alert type="info" title="Important">
 
