fix: more broken links (#531)
* fix: moar broken links

* fix(scripts): nullish coalesce if no file

* fix: undo gitignore algolia sitemap

* chore: update versions on internal doc links

* chore: update .gitignore

* chore: remove sitemap from git

Co-authored-by: Pavel Denisjuk <pavel@webiny.com>

--- a/src/docs/5.28.x/headless-cms/integrations/gatsby.mdx
+++ b/src/docs/5.28.x/headless-cms/integrations/gatsby.mdx
@@ -37,8 +37,8 @@ Use the [official starter](https://github.com/webiny/gatsby-starter-webiny) for 
 
 For this tutorial, we're going to assume you have already done the following:
 
-1. [Set up your AWS credentials locally](https://www.webiny.com/docs/infrastructure/aws/configure-aws-credentials)
-2. [Deployed a Webiny instance to a `dev` environment](https://www.webiny.com/docs/core-development-concepts/basics/project-deployment)
+1. [Set up your AWS credentials locally](/docs/{version}/infrastructure/aws/configure-aws-credentials)
+2. [Deployed a Webiny instance to a dev environment](/docs/{version}/core-development-concepts/basics/project-deployment)
 
 Once you have an app up and running, click into the "Headless CMS" app in the sidebar, click on _models_.
 
@@ -484,6 +484,6 @@ export default BlogPostTemplate = ({ data, location }) => {
 
 Using Webiny for a Headless CMS using GatsbyJS is an easy, cost-effective and scalable solution.
 
-As well as the basics we've discussed here, you have virtually no limit on the amount of records you store, or even the amount of images you store inside Webiny. You can also have multiple locales to support multiple languages, and other apps are included such as the [page builder](https://www.webiny.com/docs/page-builder/theming/introduction). Also, we have [pricing plans that scale](https://www.webiny.com/pricing) if you're a small business owner or enterprise customer.
+As well as the basics we've discussed here, you have virtually no limit on the amount of records you store, or even the amount of images you store inside Webiny. You can also have multiple locales to support multiple languages, and other apps are included such as the [page builder](/docs/{version}/page-builder/theming/introduction). Also, we have [pricing plans that scale](https://www.webiny.com/pricing) if you're a small business owner or enterprise customer.
 
 We hope you enjoy using Webiny to create your next website!
