--- a/src/docs/5.28.x/headless-cms/integrations/nextjs.mdx
+++ b/src/docs/5.28.x/headless-cms/integrations/nextjs.mdx
@@ -37,8 +37,8 @@ Use the [official starter](https://github.com/webiny/nextjs-starter-webiny) for 
 
 For this tutorial, we're going to assume you have already done the following:
 
-1. [Set up your AWS credentials locally](https://www.webiny.com/docs/infrastructure/aws/configure-aws-credentials)
-2. [Deployed a Webiny instance to a `dev` environment](https://www.webiny.com/docs/core-development-concepts/basics/project-deployment)
+1. [Set up your AWS credentials locally](/docs/{version}/infrastructure/aws/configure-aws-credentials)
+2. [Deployed a Webiny instance to a dev environment](/docs/{version}/core-development-concepts/basics/project-deployment)
 
 Once you have an app up and running, click into the "HeadlessCMS" app in the sidebar, click on _models_.
 
@@ -160,7 +160,7 @@ export async function getAllPostsWithSlug() {
 
 <Alert type="info">
 
-There's [more information about using GraphQL here](https://www.webiny.com/docs/headless-cms/basics/using-graphql-api).
+There's [more information about using GraphQL here](/docs/{version}/headless-cms/basics/using-graphql-api).
 
 </Alert>
 
@@ -430,6 +430,6 @@ Once you have those steps set up, visit the API endpoint specified in the docs a
 
 Using Webiny for a Headless CMS using NextJS is an easy, cost-effective and scalable solution.
 
-As well as the basics we've discussed here, you have virtually no limit on the amount of records you store, or even the amount of images you store inside Webiny. You can also have multiple locales to support multiple languages, and other apps are included such as the [page builder](https://www.webiny.com/docs/page-builder/theming/introduction). Also, we have [pricing plans that scale](https://www.webiny.com/pricing) if you're a small business owner or enterprise customer.
+As well as the basics we've discussed here, you have virtually no limit on the amount of records you store, or even the amount of images you store inside Webiny. You can also have multiple locales to support multiple languages, and other apps are included such as the [page builder](/docs/{version}/page-builder/theming/introduction). Also, we have [pricing plans that scale](https://www.webiny.com/pricing) if you're a small business owner or enterprise customer.
 
 We hope you enjoy using Webiny to create your next website!
