fix(headless-cms): content models via code immutable definitions (#519)

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -380,3 +380,24 @@ Here are a couple of examples of specifying icons from solid, regular, and brand
 - `far/copy`
 - `fab/aws`.
 - `fab/react`.
+
+## Immutable Code Definitions
+
+You can do what ever you want with the models via code. For that reason, there are things you need to be really careful about. We cannot prevent you from changing anything, so you need to be watchful for these pitfalls.
+
+You should **never** change `modelId` property of the model definition.
+
+There are also few field properties which must **never** change, if you want to keep your data.
+
+Properties are:
+ - `id`
+ - `storageId` - if you have created it manually
+ - `type`
+ - `multipleValues`
+ - `predefinedValues` - you can add values but do not remove them
+
+Also, if you have defined anything in `settings` property of the field, be careful about these properties:
+
+ - `settings.fields` - same rules apply as for the parent field
+ - `settings.models` - you can add models but do not remove them
+ - `settings.type`
